                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Added jsimport example (direct from kees's commit message :)

 * Added __pyjamas__.jsimport(path, mode, location)

 * remove dependency of pywin32 in pyjd MSHTML port.

 * improved event handling of pyjd MSHTML port.

 * Added platform overrides system... to pyjd!  MSHTML, hulahop and pywebkitgtk
   can now have their own platform-specific overrides.

 * Added debugger() to __pyjamas__

 * Added javascript inclusion via --include-static-js and __pyjamas__.include()

 * Added dict pop and popitem, thanks to Beni Cherniavsky

 * Added build option --bootstrap-file and a bootstrap_progress.js

 * Discarded strings are not getting translated anymore

 * Added --downloads-(yes/no) to buildall.sh and employeeadmin/build.sh

 * Added experimental support for MSHTML as a Pyjamas Desktop engine

 * Added lightout example from Radoslav Kirov

 * Added if and nested for to list comprehension

 * Added base64 module (not encode/decode file)

 * Added binascii module

 * Added struct module (not pack_into/unpack_from)

 * Added basic support for list comprehension (no ifs/multiple for)

 * Added builtin import test, which will fail if the import code
   gets too smart

 * The -d option now sets:
    --debug-wrap
    --source-tracking
    --line-tracking
    --store-source

 * Bugfix for soure tracking/debugging

 * BUGFIX: the --no-print-statements option was not honored in browser
   linker

 * fixed urllib quote TODO: need real implementation of quote

 * removed deprecated pyjs.py from root of pyjs

 * we now do not need to override pyjamas.Window fully anymore, so use
   base implementation, which now does not import gtk anymore. moved
   pyjamas/__pyjamas__ to /__pyjamas__ again.

 * Added beginnings of urllib (quote, urlencode) thanks to Ondrej Certik

 * Fixed speed issue #199!  was related to accidental inclusion of gtk.py,